# AetherEngine

./: .gitignore  .gitmodules  README.md
AetherEngine/: CMakeLists.txt  CMakeSettings.json
AetherEngine/EngineApplication/: CMakeLists.txt  main.cpp
AetherEngine/RenderingEngine/: Aether.h  CMakeLists.txt  EntryPoint.h  main.cpp
AetherEngine/RenderingEngine/Common/include/: AetherUtils.h  IRenderer.h
AetherEngine/RenderingEngine/Core/include/: Aether.h  AetherUtils.h  Core.h  CoreApp.h  IRenderer.h  IWindow.h  Log.h
AetherEngine/RenderingEngine/Core/src/: CoreApp.cpp  Log.cpp
AetherEngine/RenderingEngine/EngineD3D/include/: D3DUtils.h  RendererDX11.h
AetherEngine/RenderingEngine/EngineD3D/src/: RendererDX11.cpp
AetherEngine/RenderingEngine/Events/include/: Event.h  KeyEvent.h  MouseEvent.h
AetherEngine/RenderingEngine/GLFW/include/: WinManGLFW.h
AetherEngine/RenderingEngine/GLFW/src/: WinManGLFW.cpp
AetherEngine/cmake/modules/: FindD3D11.cmake  FindD3DCompiler.cmake  FindDXGI.cmake
AetherEngine/src/: CMakeLists.txt  main.cpp
AetherEngine/src/Renderer/: IRenderer.h
AetherEngine/src/Renderer/D3D/: D3DUtils.h  RendererDX11.cpp  RendererDX11.h
